# dotfiles

./: .bash_aliases  .bash_aliases##default  .bash_aliases##h.Blackbox  .bash_aliases##h.Pranav-Surface  .bash_aliases##h.z820-ubuntu  .bash_logout  .bashrc  .bashrc##default  .bashrc##h.Blackbox  .bashrc##h.Pranav-Surface  .bashrc##h.drpm  .bashrc##h.pminformatics  .bashrc##h.pminformatics.rush.edu  .bashrc##h.rhel-rush  .common_profile  .condarc  .datalad_shortcuts  .gitconfig  .gitconfig##default  .gitconfig##h.BFGI-project  .gitconfig##h.Blackbox  .gitconfig##h.Pranav-Surface  .gitconfig##h.SinguLab  .gitconfig##h.testing-datascience  .gitconfig##h.ubuntu-vm1  .gitignore  .gitmodules  .nanorc  .p10k.zsh  .pre-commit-config.yaml  .wakatime.cfg  .zshrc  .zshrc##default  .zshrc##h.pminformatics  CHANGELOG.md  dotfiles.code-workspace  install.sh  pyproject.toml  readme.md  releaserc.toml  (+1 more)
.config/btop/: btop.conf
.config/shell/: computer_specific  computer_specific##default  computer_specific##h.Blackbox
.config/tmux/: readme.md  tmux.conf  tmux.conf.local
.config/yadm/: bootstrap
.datalad/: config
.nano/: search_history
.ssh/: add-keys.sh  allowed_signers  id_ed25519.pub
git/: git-commit-template.txt
yadm/: CHANGELOG.md  pyproject.toml  readme.md
yadm/bootstrap/: readme.md  setup-tmux.sh
yadm/certs/: mishralab_root_ca.crt
yadm/functions/: active_python.bash  active_python.sh  bash-logger.bash  bash-logger.sh  clear_screen.sh  conda_initialize.bash  docker_swarm.bash  docker_swarm.sh  git_functions.bash  ssh-functions.bash  tmux_functions.sh  uv_functions.sh
yadm/scripts/: check_and_run_keychain.sh  crontab_kill_keychain.sh  docker-node-labels.sh  gen-long-cert.sh  homelab-docker-stack.sh  kill_keychain.sh
yadm/scripts/bitwarden/: agent-bridge.sh
yadm/scripts/completion/: datalad.sh  git-completion.zsh
yadm/scripts/gui/: kill-vnc-rdp.sh
yadm/scripts/keychain/: keychain_alias.sh  keychain_interactive_shell.sh.bak  keychain_login_session.sh
yadm/scripts/monitoring/: nvitop-exporter.sh
yadm/scripts/python/: active_python.py  sort_json_alphabetically.py
yadm/scripts/wsl/: Update-WSLPortProxy.ps1  wsl_port_forwarding.sh
yadm/self/: pre-commit-test.sh
yadm/shell/: computer_specific  computer_specific##default  computer_specific##h.Blackbox  computer_specific##h.pminformatics  computer_specific##h.pranav-surface
yadm/tmux/: .tmux.conf  readme.md  tmux.conf.local
yadm/xrdp/: restart-xrdp.sh  xrdp_sessions.sh
