[project]
name = "dotfiles"
description = "Pranav Mishra's Dotfiles, managed with yadm"
version = "1.1.0"

# Python Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
assets = []
build_command_env = ['FORGEJO_TOKEN']
build_command = 'bash yadm/self/pre-commit-test.sh'
commit_message = "ci(semantic-release): automatic update - v{version}"
commit_parser = "conventional"
logging_use_named_masks = false
no_git_verify = false
tag_format = "v{version}"
upload_to_release = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "Pranav Kumar Mishra <62562712+pranavmishra90@users.noreply.github.com>"
[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat", "docs"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.branches.main]
match = "main|master|release"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format="md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.remote]
name = "origin"
type = "gitea"
domain = "git.mishracloud.com"
token = { env = "FORGEJO_TOKEN" }
ignore_token_for_push = true
insecure = false

[tool.semantic_release.publish]
upload_to_vcs_release = true